--- a/resources/css/scss/index.scss
+++ b/resources/css/scss/index.scss
@@ -4,85 +4,84 @@
 @import "reset";
 @import "colors_b";
 @import "colors"; //공통
-@import "fonts_b";  
-@import "fonts"; //공통  
-@import "variables_b"; 
+@import "fonts_b";
+@import "fonts"; //공통
+@import "variables_b";
 @import "variables"; //공통
-@import "mixins_b"; 
-@import "mixins"; //공통 
+@import "mixins_b";
+@import "mixins"; //공통
 @import "global_b";
 @import "global"; //공통
-@import "./modules/modules"; //공통  
-@import 'overrides_b'; 
-@import 'overrides'; //공통
-@import "layout_b";  
-@import "layout"; //공통   
-     
+@import "./modules/modules"; //공통
+@import "overrides_b";
+@import "overrides"; //공통
+@import "layout_b";
+@import "layout"; //공통
+
 .contents-body {
-    flex: 1;
+	flex: 1;
 }
 .table-group {
-    display: flex;
-    height: 100%;
-    &:not(:only-child) {
-        height: auto;
-    }
+	display: flex;
+	height: 100%;
+	&:not(:only-child) {
+		height: auto;
+	}
 }
 .k-tabstrip-wrapper > .k-tabstrip {
-    flex: 1 1 auto;
-    width: 100%;
+	flex: 1 1 auto;
+	width: 100%;
 }
 .tabpanel {
-    // flex: 1;
-    .table-set {
-       height: 100%;
-    }
-
+	// flex: 1;
+	.table-set {
+		height: 100%;
+	}
 }
 .k-toolbar.k-grid-toolbar {
-    background-color: $white;
-    overflow: hidden;
+	background-color: $white;
+	overflow: hidden;
 }
 .contents-wrap {
-    .k-toolbar.k-grid-toolbar {
-        background-color: $gray-f5;
-    }  
+	.k-toolbar.k-grid-toolbar {
+		background-color: $gray-f5;
+	}
 }
-.table-group.divide-thick  {
-    height: unset;
+.table-group.divide-thick {
+	height: unset;
 }
-.table-content.grid { 
-    .k-grid {
-    flex: 1;
-    min-height: 150px;
-    }
-}
+// .table-content.grid {
+// 	.k-grid {
+// 		flex: 1;
+// 		min-height: 150px;
+// 	}
+// }
 .k-grid-header {
-    border-bottom: 1px solid $gray-e4;
+	border-bottom: 1px solid $gray-e4;
 }
-.k-grid-content {
-    overflow: auto;
-}
+// .k-grid-content {
+// 	overflow: auto;
+// }
 .k-tabstrip-wrapper:only-child {
-    flex: 1; 
+	flex: 1;
 }
 .table-bottom {
-    // display: flex;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    margin-top: -1px;
-    border-bottom: 0;
-    border-top: 1px solid $gray-a;
-    box-shadow: none;
-    .btn-box {
-        margin-top: 0;
-    }
+	// display: flex;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	margin-top: -1px;
+	border-bottom: 0;
+	border-top: 1px solid $gray-a;
+	box-shadow: none;
+	.btn-box {
+		margin-top: 0;
+	}
 }
 .status-reject td {
-    background: $reject !important;
+	background: $reject !important;
 }
 .status-wait td {
-    background: $wait !important;
+	background: $wait !important;
 }
