--- a/resources/css/scss/index_bc.scss
+++ b/resources/css/scss/index_bc.scss
@@ -4,18 +4,18 @@
 @import "reset";
 @import "colors"; //공통
 @import "colors_bc";
-@import "fonts_bc";  
+@import "fonts_bc";
 @import "variables"; //공통
 @import "variables_bc";
-@import "mixins_bc";  
-@import "./modules/modules_bc";  
+@import "mixins_bc";
+@import "./modules/modules_bc";
 @import "global"; //공통
 @import "global_bc";
-@import 'overrides'; //공통 
+@import 'overrides'; //공통
 @import 'overrides_bc';
-@import "layout"; //공통   
-@import "layout_bc";   
-      
+@import "layout"; //공통
+@import "layout_bc";
+
 
 .contents-body {
     flex: 1;
@@ -44,12 +44,12 @@
 .contents-wrap {
     .k-toolbar.k-grid-toolbar {
         background-color: $gray-f5;
-    }  
+    }
 }
 .table-group.divide-thick  {
     height: unset;
 }
-.table-content.grid { 
+.table-content.grid {
     .k-grid {
     flex: 1;
     min-height: unset;
@@ -58,11 +58,11 @@
 .k-grid-header {
     border-bottom: 1px solid $gray-e4;
 }
-.k-grid-content {
-    overflow: auto;
-}
+// .k-grid-content {
+//     overflow: auto;
+// }
 .k-tabstrip-wrapper:only-child {
-    flex: 1; 
+    flex: 1;
 }
 .table-bottom {
     // display: flex;
