--- a/resources/css/scss/modules/_form_bp.scss
+++ b/resources/css/scss/modules/_form_bp.scss
@@ -6,16 +6,17 @@
 
 .box-group {
     display: flex;
-    > * + * {
-        margin-left: 6px;
-    }
+    gap: 6px;
 }
 .form-group {
     .label {
         @include bp-font-size-sm;
     }
     &.box {
-        padding: 16px 20px;
+        padding: 16px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border: 1px solid $gray-c;
         border-radius: 3px;
         flex: 1 1 auto;
